fully implemented the 'Play Computer Move' button to make a random move, fixed a castling bug where king could jump over bishop or piece next to it to castle

--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ body{
 	gap: 20px;
 }
 
-@media (max-width: 975px) {
+@media (max-width: 1057px) {
 	.history {
 		display: none;
 	}
